examples/diagnostics/expected/1129-diagnostics-array-dim-not-const.stderr
error: array dimension must be a compile-time integer constant
  --> examples/diagnostics/1129-diagnostics-array-dim-not-const.sx:18:12
   |
18 | BadArr :: [get()]i64;
   |            ^^^^^
